# M2i_CDSD_Projet

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  subject.md
app/: main.py
app/config/: __init__.py  dataset_enum.py  dataset_settings.py  ingestion_pipelines_settings.py  minio_settings.py  mongodb_settings.py  postgresql_settings.py
app/notebooks/: 01_EDA_GuitarSet.ipynb  01_analyse_eploratoire.ipynb
app/src/extractors/: __init__.py  abstract_extractor.py  csv_extractor.py  excel_extractor.py  jams_extractor.py  wav_extractor.py  xml_extractor.py
app/src/loaders/: csv_loader.py  jams_loader.py  xml_loader.py
app/src/models/: __init__.py  jams_models.py  xml_models.py
app/src/pipelines/: __init__.py  abstract_pipeline.py  guitar_set_ingestion_pipeline.py  idmt_smt_guitar_ingestion_pipeline.py  preprocessing_pipeline.py
app/src/storages/: __init__.py  minio_storage.py  mongo_storage.py  postgresql_storage.py
app/src/transformers/: __init__.py  element_tree_wrapper.py
app/src/utils/: __init__.py  dataset_downloader.py  logger.py
config/: etl_config.yaml
docs/: rncp35288.md
etl/: main.py
etl/config/: etl_config.yaml  etl_settings.py  minio_settings.py  mongodb_settings.py  postgresql_settings.py
etl/src/extractors/: __init__.py  abstract_extractor.py  (+9 more)
minio/init/: Dockerfile  init.sh
mongo/initdb/: 01_collections.js
postgres/initdb/: 01_tables.sql
src/extractors/: minio_extractor.py
src/loaders/: csv_loader.py  json_loader.py  minio_loader.py
src/pipelines/: etl_pipeline.py
src/utils/: config.py  minio.py
(+20 files in other folders)
