[project]
name = "m2i-projet-cdsd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jams>=0.3.5",
    "jupyterlab>=4.5.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "minio>=7.2.20",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "pymongo>=4.16.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
]
